Change package source path
Remove 2 levels depth from the src files.

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Dealweb\\": "src/Dealweb/"
+            "Dealweb\\Integrator\\": "src/"
         }
     }
 }
